[package]
name = "discord_server"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
smush_discord_shared = { git = "https://github.com/jam1garner/smush_info_shared.git" }
serde_json = "1"
lazy_static = "1.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
