[package]
name = "smush_discord_client"
version = "0.1.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smush_discord_shared = { path = "../shared" }
serde_json = "1"
dirs = "2"
